--- a/todo
+++ b/todo
@@ -1,4 +1,4 @@
- => better way to handle materialized views recreation
+ => refresh data function
  => change materialized view name when updating name field of "table"
  => change materialized view column name whend changing field name
  => function create_update
